--- a/ses2/demo_in_class.ipynb
+++ b/ses2/demo_in_class.ipynb
@@ -170,10 +170,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aaaa', 'bb', 'ccc', 'd']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = ['ccc', 'aaaa', 'd', 'bb']\n",
+    "\n",
+    "#vi laver en function der kan sortere det sidste i rækken.\n",
+    "\n",
+    "def last_letter(x):\n",
+    "    return x[-1]\n",
+    "\n",
+    "#sorter efter alfabetisk rækkefølge af sidste bogstav i hvert objekt\n",
+    "sorted(l, key=last_letter)\n",
+    "\n",
+    "#sorter efter længden\n",
+    "#sorted(l, key=len)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
